--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
-}
+} */
 body {
   background-color: #f8f9fa;
   box-sizing: border-box;
 }
 
-.container {
+/* .container {
   display: flex;
-}
+} */
 
 .other {
-  flex: 4;
+  flex: 6;
 }
