--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,21 +1,37 @@
 .sidebar {
   flex: 1;
-  height: calc(100vh - 50px);
-  /* height: 100%; */
-  box-sizing: border-box;
+  border-right: 0.5px solid lightgray;
+  min-height: 100vh;
   background-color: #343a40;
-  position: sticky;
-  /* padding: 30px 20px; */
-  width: 150px;
 }
 
-.sidebarWrapper {
-  padding: 20px;
+.top {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
   color: white;
 }
 
-.sidebarMenu {
-  margin-bottom: 10px;
+hr {
+  height: 0;
+  border: 0.5px solid lightgray;
+}
+
+.center {
+  padding-left: 10px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: white;
 }
 
 .sidebarList {
@@ -53,13 +69,4 @@ link:active {
 
 .sidebarUpper {
   position: relative;
-}
-
-.toggle-menu-btn {
-  display: inline-block;
-  color: black;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  cursor: pointer;
 }
