--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -1,72 +1,44 @@
 .topbar {
-  width: 100%;
-  height: 70px;
-  background-color: white;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-  left: 300px;
-  box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%),
-    0 1px 5px 0 rgb(0 0 0 / 12%);
-}
-
-.topbarWrapper {
-  height: 100%;
-  padding: 0px 20px;
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  width: 100px;
   height: 50px;
-}
-
-.logo:hover {
-  cursor: pointer;
-}
-
-.navSearch {
-  position: relative;
-  height: 40px;
+  border-bottom: 0.5px solid lightgray;
   display: flex;
   align-items: center;
-  overflow: hidden;
-  left: 870px;
-  background-color: #ffffff;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border-radius: 15px;
+  font-size: 14px;
 }
 
-.navSearch > input {
-  border: none !important;
-  outline: 0px solid transparent;
-  height: 100%;
+.wrapper {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  justify-content: space-between;
   width: 100%;
-  padding: 5px 5px 5px 5px;
-  font-size: 1rem;
-  border-radius: 15px;
-  color: #455560;
-  background-color: #ffffff;
 }
-.topRight {
+
+.search {
   display: flex;
   align-items: center;
+  border: 0.5px solid lightgray;
+  padding: 3px;
+  border-radius: 10px;
 }
 
-.topAvatar {
-  width: 70px;
-  height: 70px;
-  cursor: pointer;
-  position: absolute;
-  right: 30px;
-  border-radius: 50%;
+input {
+  border: none;
+  outline: none;
+  background: transparent;
 }
 
-.topbarIcons {
-  position: relative;
-  left: 900px;
-  cursor: pointer;
-  margin-right: 10px;
-  color: #555;
+.items {
+  align-items: center;
+  display: flex;
+}
+
+.item {
+  align-items: center;
+  display: flex;
+  margin-right: 20px;
+}
+
+.body {
+  padding: 20px;
 }
