--- a/src/Pages/Starred/Starred.css
+++ b/src/Pages/Starred/Starred.css
@@ -1,11 +1,14 @@
-.starredApp {
-  flex: 4;
-}
-
 .list {
   display: flex;
 }
 
 .listContainer {
   flex: 6;
+}
+
+.starred {
+  height: 500px;
+  padding: 20px;
+  width: 96.5%;
+  background-color: white;
 }
