--- a/src/Pages/User/User.css
+++ b/src/Pages/User/User.css
@@ -9,3 +9,75 @@
 .user {
   padding: 20px;
 }
+
+.userContainer {
+  display: flex;
+  margin-top: 20px;
+}
+
+.userDisplay {
+  flex: 1;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.userUpdate {
+  flex: 2;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  margin-left: 20px;
+}
+
+.userShowTop {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.userShowBottom {
+  margin-top: 20px;
+}
+
+.userShowUserName {
+  font-weight: 600;
+}
+
+.userShowUserTitle {
+  font-weight: 300;
+}
+
+.userShowTitle {
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(175, 170, 170);
+}
+
+.userShowInfoTitle {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin: 20px 0px;
+  color: #444;
+}
+
+.userEdit {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin: 20px 0px;
+  color: #444;
+}
+
+.userTitleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.userUpdateTitle {
+  font-weight: 600;
+}
